--- a/src/css/register.css
+++ b/src/css/register.css
@@ -1,13 +1,7 @@
 .select-type-button {
-    background: white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding:10px;
-
+    color: black !important;
+    font-size: 1.7rem !important;
     & svg {
-        margin:10px; 
-        
+        font-size: 4rem !important;
     }
 }
