--- a/src/css/register.css
+++ b/src/css/register.css
@@ -23,3 +23,11 @@
         background: rgba(0,0,0,.7) !important;
     }
 }
+
+.registration-form {
+    border-radius: 15px;
+    background-color: white;
+    width: 80%;
+    height: 500px;
+    box-shadow: 0px 4px 10px 1px rgb(98, 98, 98);
+}
