--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
     height: 100% !important;
 }
 .w100 {
-    height: 100% !important;
+    width: 100% !important;
 }
 .hw100 {
     height: 100% !important;
