--- a/src/css/register.css
+++ b/src/css/register.css
@@ -7,6 +7,7 @@
 
 .select-type-button {
     font-size: 1.2rem !important;
+    width: 125px;
 }
 
 .registration-form {
@@ -15,5 +16,9 @@
     width: 80%;
     height: 500px;
     box-shadow: 0px 4px 10px 1px rgb(98, 98, 98);
+}
+
+.css-1elwnq4-MuiPaper-root-MuiAccordion-root:before {
+    height:0px !important;
 }
 
