--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,143 @@ body {
     height: 100% !important;
     width : 100% !important;
 }
+.b {
+    font-weight: bold !important;
+}
+.br5 {
+    border-radius: 5px !important;
+}
+.br10 {
+    border-radius: 10px !important;
+}
+.br15 {
+    border-radius: 15px !important;
+}
+.br20 {
+    border-radius: 20px !important;
+}
+
+.m1 {
+    margin:5px !important; 
+}
+.mt1 {
+    margin-top: 5px !important;
+}
+.mr1 {
+    margin-right: 5px !important;
+}
+.mb1 {
+    margin-bottom: 5px !important;
+}
+.ml1 {
+    margin-left: 5px !important;
+}
+.m2 {
+    margin: 10px !important; 
+}
+.mt2 {
+    margin-top: 10px !important;
+}
+.mr2 {
+    margin-right: 10px !important;
+}
+.mb2 {
+    margin-bottom: 10px !important;
+}
+.ml2 {
+    margin-left: 10px !important;
+}
+.p1 {
+    padding: 5px !important; 
+}
+.pt1 {
+    padding-top: 5px !important;
+}
+.pr1 {
+    padding-right: 5px !important;
+}
+.pb1 {
+    padding-bottom: 5px !important;
+}
+.pl1 {
+    padding-left: 5px !important;
+}
+.p2 {
+    padding: 10px !important; 
+}
+.pt2 {
+    padding-top: 10px !important;
+}
+.pr2 {
+    padding-right: 10px !important;
+}
+.pb2 {
+    padding-bottom: 10px !important;
+}
+.pl2 {
+    padding-left: 10px !important;
+}
+.m3 {
+    margin: 15px !important; 
+}
+.mt3 {
+    margin-top: 15px !important;
+}
+.mr3 {
+    margin-right: 15px !important;
+}
+.mb3 {
+    margin-bottom: 15px !important;
+}
+.ml3 {
+    margin-left: 15px !important;
+}
+.m4 {
+    margin: 20px !important; 
+}
+.mt4 {
+    margin-top: 20px !important;
+}
+.mr4 {
+    margin-right: 20px !important;
+}
+.mb4 {
+    margin-bottom: 20px !important;
+}
+.ml4 {
+    margin-left: 20px !important;
+}
+
+.p3 {
+    padding: 15px !important; 
+}
+.pt3 {
+    padding-top: 15px !important;
+}
+.pr3 {
+    padding-right: 15px !important;
+}
+.pb3 {
+    padding-bottom: 15px !important;
+}
+.pl3 {
+    padding-left: 15px !important;
+}
+.p4 {
+    padding: 20px !important; 
+}
+.pt4 {
+    padding-top: 20px !important;
+}
+.pr4 {
+    padding-right: 20px !important;
+}
+.pb4 {
+    padding-bottom: 20px !important;
+}
+.pl4 {
+    padding-left: 20px !important;
+}
 
 .row {
     display: flex;
