--- a/src/css/modalComponents/add-marker.css
+++ b/src/css/modalComponents/add-marker.css
@@ -6,6 +6,8 @@
         font-weight: bold !important;
         & svg {
             margin-right: -5px;
+            margin-bottom: 1px;
+            font-size: 1rem !important;
         }
     }
 }
