--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,6 +1,15 @@
-.MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation24.MuiDialog-paper.MuiDialog-paperScrollPaper.MuiDialog-paperWidthSm.css-1t1j96h-MuiPaper-root-MuiDialog-paper{
-    border-radius: 20px !important;
-    width: 80%;
-    min-width: 326px;
-    max-width: 500px;
+#modal {
+    & .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation24.MuiDialog-paper.MuiDialog-paperScrollPaper.MuiDialog-paperWidthSm.css-1t1j96h-MuiPaper-root-MuiDialog-paper{
+        border-radius: 20px !important;
+        width: 80%;
+        min-width: 326px;
+        max-width: 500px;
+    }
+
+    &.add-marker-modal {
+        & .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation24.MuiDialog-paper.MuiDialog-paperScrollPaper.MuiDialog-paperWidthSm.css-1t1j96h-MuiPaper-root-MuiDialog-paper {
+            overflow: visible !important;
+        }
+       
+    }
 }
