--- a/src/css/modalComponents/add-marker.css
+++ b/src/css/modalComponents/add-marker.css
@@ -1,5 +1,4 @@
 .marker-type-row {
-    
     & button {
         border-radius: 20px;
         padding: 0px 10px; 
@@ -20,6 +19,26 @@
     & .MuiOutlinedInput-root {
         border-radius: 15px !important;
     }
+}
+
+.create-marker-button {
+    height:0px; 
+    overflow:visible; 
+    transform:translateY(30px);
+
+    & button {
+        line-height: 0 !important;
+        &:disabled {
+            opacity: 1 !important;
+            background-color: rgb(91, 91, 91) !important;
+            color: #2f2f2f !important;
+        }
+    }
+}
+
+.add-marker-start-icon {
+    font-size: 22px !important;
+    margin-right: -4px !important;
 }
 
 
