--- a/src/css/map.css
+++ b/src/css/map.css
@@ -79,10 +79,11 @@
 }
 
 .details-button {
-    background: green;
+    background: #1976d2;
     color: white;
+    font-weight: bold;
     border-radius: 5px;
-    border: 1px solid gray;
+    border:0px; 
     padding: 6px 10px;
     margin: 7px;
 }
