--- a/src/css/modalComponents/marker-details.css
+++ b/src/css/modalComponents/marker-details.css
@@ -1,14 +1,23 @@
+#marker-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:10px;
+    padding-bottom: 20px; 
 
+    & h1 {
+        margin:0px;
+        font-size: 1.3rem;
+    }
 
+    & p {
+        margin:0px; 
+    }
 
-
-
-
-
-
-
-
-
+    & .marker-type {
+        color:gray;
+    }
+}
 
 
 
