--- a/src/css/modalComponents/marker-details.css
+++ b/src/css/modalComponents/marker-details.css
@@ -8,6 +8,12 @@
     & h1 {
         margin:0px;
         font-size: 1.3rem;
+
+        &.go-back-header {
+            flex-grow: 1;
+            margin-left: -24px;
+            text-align: center;
+        }
     }
 
     & p {
