--- a/src/css/modalComponents/notifications.css
+++ b/src/css/modalComponents/notifications.css
@@ -17,8 +17,8 @@
 
 .timestamp {
     color:gray;
-    font-size: .9rem;
-    margin-top: 1px;
+    /* font-size: .9rem;
+    margin-top: 1px; */
 }
 
 .summary-text {
