--- a/src/css/modalComponents/settings.css
+++ b/src/css/modalComponents/settings.css
@@ -1,9 +1,15 @@
 #settings-modal {
     display: flex;
     flex-flow: column;
-    padding:10px 10px 20px 10px;
+    padding:10px 20px 20px 20px;
 
-    
+    & .settings-accordian {
+        & .svg-right-10 {
+            & svg {
+                margin-right: 10px;
+            }
+        }
+    }
 }
 
 .settings-row {
