--- a/src/css/modalComponents/marker-details.css
+++ b/src/css/modalComponents/marker-details.css
@@ -14,6 +14,12 @@
             margin-left: -24px;
             text-align: center;
         }
+
+        &.regular-header {
+            flex-grow: 1;
+            margin-right: -24px;
+            text-align: center;
+        }
     }
 
     & p {
