--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -7,7 +7,7 @@
         overflow: visible;
     }
 
-    & .css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop {
+    & .MuiBackdrop-root.MuiModal-backdrop {
         background: rgb(0,0,0,.75) !important;
     }
 
@@ -20,10 +20,6 @@
         & .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation24.MuiDialog-paper.MuiDialog-paperScrollPaper.MuiDialog-paperWidthSm.css-1t1j96h-MuiPaper-root-MuiDialog-paper {
             overflow: visible !important;
         }
-    }
-
-    & .css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root.Mui-expanded {
-        /* height: 64px; */
     }
     
     & .modal-icon-container {
@@ -57,6 +53,11 @@
     }
 }
 
+.MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters {
+    background-color: transparent !important;
+    box-shadow: none !important;
+}
+/* 
 .css-1elwnq4-MuiPaper-root-MuiAccordion-root {
     background-color: transparent !important;
-}
+} */
