--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -54,9 +54,23 @@
 }
 
 .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters {
+    background: transparent !important;
+    background-image: transparent !important;
     background-color: transparent !important;
     box-shadow: none !important;
+
+    &::before {
+        height:0px;
+    }
+
+    &::after {
+        height:0px;
+    }
 }
+
+/* .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters {
+
+} */
 /* 
 .css-1elwnq4-MuiPaper-root-MuiAccordion-root {
     background-color: transparent !important;
