--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -53,7 +53,7 @@
     }
 }
 
-.MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters {
+.MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiAccordion-root.MuiAccordion-rounded.MuiAccordion-gutters:not(.bg-white) {
     background: transparent !important;
     background-image: transparent !important;
     background-color: transparent !important;
